// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";
package thanos;

import "types.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "storepb";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// Do not generate XXX fields to reduce memory footprint and opening a door
// for zero-copy casts to/from prometheus data types.
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

/// RuleGroups is set of rule groups.
/// This and below APIs are meant to be used for unmarshaling and marshsaling rules from/to Prometheus API.
/// That's why json tag has to be customized and matching https://github.com/prometheus/prometheus/blob/c530b4b456cc5f9ec249f771dff187eb7715dc9b/web/api/v1/api.go#L955
/// NOTE: See rules_custom_test.go for compatibility tests.
///
/// For rule parsing from YAML configuration other struct is used: https://github.com/prometheus/prometheus/blob/20b1f596f6fb16107ef0c244d240b0ad6da36829/pkg/rulefmt/rulefmt.go#L105
message RuleGroups {
  repeated RuleGroup groups = 1 [(gogoproto.jsontag) = "groups" ];
}

/// RuleGroup has info for rules which are part of a group.
message RuleGroup {
  string name                               = 1 [(gogoproto.jsontag) = "name" ];
  string file                               = 2 [(gogoproto.jsontag) = "file" ];
  repeated Rule rules                       = 3 [(gogoproto.jsontag) = "rules" ];
  double interval                           = 4 [(gogoproto.jsontag) = "interval" ];
  double evaluation_duration_seconds        = 5 [(gogoproto.jsontag) = "evaluationTime" ]; // TODO: Is it really second?
  google.protobuf.Timestamp last_evaluation = 6 [(gogoproto.jsontag) = "lastEvaluation" ];

  // Thanos specific.
  PartialResponseStrategy DeprecatedPartialResponseStrategy = 7 [(gogoproto.jsontag) = "partial_response_strategy" ];
  PartialResponseStrategy PartialResponseStrategy           = 8 [(gogoproto.jsontag) = "partialResponseStrategy" ];
}

message Rule {
  oneof result {
    RecordingRule recording = 1;
    Alert alert= 2;
  }
}

enum AlertState {
  PENDING     = 0;
  FIRING      = 1;
  INACTIVE    = 2;
}

message AlertInstance {
  AlertState state                    = 1 [(gogoproto.jsontag) = "state" ]; // TODO: Is state really in both places?
  repeated Label labels               = 2 [(gogoproto.jsontag) = "labels" ];
  repeated Label annotations          = 3 [(gogoproto.jsontag) = "annotations" ];
  google.protobuf.Timestamp active_at = 4 [(gogoproto.jsontag) = "activeAt,omitempty" ];
  string value                        = 5 [(gogoproto.jsontag) = "value" ];
}

message Alert {
  AlertState state                          = 1 [(gogoproto.jsontag) = "state" ]; // TODO: Is state really in both places?
  string name                               = 2 [(gogoproto.jsontag) = "name" ];
  string query                              = 3 [(gogoproto.jsontag) = "query" ];
  double duration_seconds                   = 4 [(gogoproto.jsontag) = "duration" ]; // TODO: Is it really second?
  repeated Label labels                     = 5 [(gogoproto.jsontag) = "labels" ];
  repeated Label annotations                = 6 [(gogoproto.jsontag) = "annotations" ];
  repeated AlertInstance alerts             = 7 [(gogoproto.jsontag) = "alerts" ];
  string health                             = 8 [(gogoproto.jsontag) = "health" ];
  string last_error                         = 9 [(gogoproto.jsontag) = "lastError,omitempty" ];
  double evaluation_duration_seconds        = 10 [(gogoproto.jsontag) = "evaluationTime" ]; // TODO: Is it really second?
  google.protobuf.Timestamp last_evaluation = 11 [(gogoproto.jsontag) = "lastEvaluation" ];
}

message RecordingRule {
  string name                               = 1 [(gogoproto.jsontag) = "name" ];
  string query                              = 2 [(gogoproto.jsontag) = "query" ];
  repeated Label labels                     = 3 [(gogoproto.jsontag) = "labels" ];
  string health                             = 4 [(gogoproto.jsontag) = "health" ];
  string last_error                         = 5 [(gogoproto.jsontag) = "lastError,omitempty" ];
  double evaluation_duration_seconds        = 6 [(gogoproto.jsontag) = "evaluationTime" ]; // TODO: Is it really second?
  google.protobuf.Timestamp last_evaluation = 7 [(gogoproto.jsontag) = "lastEvaluation" ];
}
